# previsao-polymarket-btc5m-bot

./: .gitignore  README.md
bot/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
bot/src/arb_bot/: __init__.py  __main__.py  accounting.py  core.py
dashboard/: .env.example  package-lock.json  package.json
dashboard/app/: layout.jsx  page.jsx  styles.css
dashboard/app/api/config/: route.js
dashboard/app/api/login/: route.js
dashboard/app/api/snapshot/: route.js
dashboard/lib/: auth.js  markets.js
