[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "previsao-polymarket-arb-bot"
version = "0.1.0"
description = "Dry-run arbitrage scanner for Previsao and Polymarket mirrored prediction markets"
requires-python = ">=3.11"
dependencies = [
  "py-clob-client>=0.25.0",
  "py-clob-client-v2>=0.0.38",
  "eth-account>=0.13.0",
  "websocket-client>=1.8.0",
]

[project.scripts]
arb-scan = "arb_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
